data/derived/fa15/progs/unify/prog0375.ml.out
Characters 578-590:
  | Square (e1) -> "(" ^ exprToString ^ ")^2";;
                         ^^^^^^^^^^^^
Error: This expression has type expr -> string
       but an expression was expected of type string
